--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,6 @@
     <title>Ejercicios Javascript</title>
 </head>
 <body>
-    <script src="./js/ejercicios.js"></script>
+    <script src="../js/ejercicios.js"></script>
 </body>
 </html>
